--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Node.js dependencies
-backend/node_modules/
-frontend/node_modules/
+node_modules/
+/node_modules/
 **/package-lock.json
 **/yarn.lock
 **/.pnpm-lock.yaml
